--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
         tools:ignore="allowBackup">
 
         <activity
-            android:name=".ui.PresentationActivity"
-            android:label="@string/title_activity_presentation"
+            android:name=".ui.activity.PresentationActivity"
             android:theme="@style/Theme.Forecast.NoActionBar">
 
             <intent-filter>
