--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,8 +68,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-    implementation("io.coil-kt:coil:0.12.0")
-    implementation("io.coil-kt:coil-svg:0.12.0")
+    implementation("io.coil-kt:coil:$coil_version")
+    implementation("io.coil-kt:coil-svg:$coil_version")
 
     testImplementation 'junit:junit:4.13.2'
 
