--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext.lifecycle_version = "2.3.1"
     ext.koin_version = "3.1.2"
     ext.nav_version = "2.3.5"
+    ext.coil_version = "0.12.0"
 
     repositories {
         google()
