--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 buildscript {
-    ext.kotlin_version = "1.5.30"
-    ext.lifecycle_version = "2.3.1"
-    ext.koin_version = "3.1.2"
-    ext.nav_version = "2.3.5"
-    ext.coil_version = "0.12.0"
+    ext {
+        retrofit_version = '2.9.0'
+        kotlin_version = "1.5.30"
+        lifecycle_version = "2.3.1"
+        koin_version = "3.1.2"
+        nav_version = "2.3.5"
+        coil_version = "1.3.2"
+        room_version = "2.3.0"
+    }
 
     repositories {
         google()
