--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        retrofit_version = '2.9.0'
+        retrofit_version = "2.9.0"
         kotlin_version = "1.5.30"
         lifecycle_version = "2.3.1"
         koin_version = "3.1.2"
