--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.albatros.forecast"
-    android:versionName="1.1">
+    package="com.albatros.forecast">
+
     <!-- Required for API access -->
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- Required for constraining refresh workers -->
@@ -12,9 +12,9 @@
     <application
         android:name=".model.repo.ForecastApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.Forecast"
         android:usesCleartextTraffic="true"
