--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -14,7 +15,7 @@ android {
         /* noinspection OldTargetApi */
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName "1.11"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -64,6 +65,7 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
 
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.firebase:firebase-analytics:19.0.1'
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
