--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.firebase:firebase-analytics:19.0.1'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -82,5 +83,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 }
