--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
 
         <activity
             android:name=".ui.activity.PresentationActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Forecast.NoActionBar">
+            android:theme="@style/Theme.Forecast.NoActionBar"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
