--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
     defaultConfig {
         applicationId "com.albatros.forecast"
         minSdkVersion 29
+        multiDexEnabled true
         /* noinspection OldTargetApi */
         targetSdkVersion 30
         versionCode 1
