--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: CI Unit_tests
 
-on: [ pull_request, push ] 
+on: [ pull_request, push ]
 
 jobs:
+  
   Unit-test:
     name: Run unit tests in master
     runs-on: ubuntu-latest
@@ -14,9 +15,23 @@ jobs:
       - name: Run tests
         run: ./gradlew test
       - name: Build with Gradle
-        run: ./gradlew :app:assembleDebug
+        run: ./gradlew build
+        
+  build:
+    name: Generate APK
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
+
+      - name: Build Debug APK
+        run: bash ./gradlew :app:assembleDebug
+
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
-          name: app-debug.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+          name: App
+          path: ${{ github.workspace }}/app/build/outputs/apk/debug/app-debug.apk
