--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,12 @@ plugins {
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    buildToolsVersion "31.0.0"
 
     defaultConfig {
         applicationId "com.albatros.forecast"
         minSdkVersion 29
         multiDexEnabled true
-        /* noinspection OldTargetApi */
         targetSdkVersion 31
         versionCode 1
         versionName "1.32"
@@ -43,8 +42,8 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2-native-mt')
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -52,10 +51,10 @@ dependencies {
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 
     implementation "io.insert-koin:koin-core:$koin_version"
-    implementation "io.insert-koin:koin-android:$koin_version"
-    implementation "io.insert-koin:koin-android-compat:$koin_version"
-    implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
-    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
+    implementation "io.insert-koin:koin-android:3.1.3"
+    implementation "io.insert-koin:koin-android-compat:3.1.3"
+    implementation "io.insert-koin:koin-androidx-workmanager:3.1.3"
+    implementation "io.insert-koin:koin-androidx-compose:3.1.3"
     testImplementation "io.insert-koin:koin-test:$koin_version"
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
