--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@ buildscript {
 
     ext {
         retrofit_version = "2.9.0"
-        kotlin_version = "1.5.30"
+        kotlin_version = "1.6.0-RC"
         lifecycle_version = "2.4.0"
-        koin_version = "3.1.2"
+        koin_version = "3.1.3"
         nav_version = "2.3.5"
         coil_version = "1.3.2"
-        room_version = "2.3.0"
+        room_version = "2.4.0-alpha04"
     }
 
     repositories {
