--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         multiDexEnabled true
         targetSdkVersion 31
         versionCode 1
-        versionName "1.32"
+        versionName "1.38"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -41,9 +41,8 @@ android {
 }
 
 dependencies {
-
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -51,10 +50,10 @@ dependencies {
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 
     implementation "io.insert-koin:koin-core:$koin_version"
-    implementation "io.insert-koin:koin-android:3.1.3"
-    implementation "io.insert-koin:koin-android-compat:3.1.3"
-    implementation "io.insert-koin:koin-androidx-workmanager:3.1.3"
-    implementation "io.insert-koin:koin-androidx-compose:3.1.3"
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-android-compat:$koin_version"
+    implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
+    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
     testImplementation "io.insert-koin:koin-test:$koin_version"
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
