--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
 
     ext {
+        coroutine_version = "1.5.2"
         retrofit_version = "2.9.0"
-        kotlin_version = "1.6.0-RC"
+        kotlin_version = "1.6.0-RC2"
         lifecycle_version = "2.4.0"
         koin_version = "3.1.3"
         nav_version = "2.3.5"
         coil_version = "1.3.2"
-        room_version = "2.4.0-alpha04"
+        room_version = "2.4.0-beta01"
     }
 
     repositories {
